--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -5,5 +5,10 @@
         {%else %}
         <h1>Hello World </h1>
         {%endif %}
+        <ul>
+            {%for product in products %}
+            <li>{{product}}</li>
+            {%endfor %}
+        </ul>
     </body>
 </html>
